apps/base/media/jellystat/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellystat-internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - jellystat.j6n.internal
  rules:
  - backendRefs:
    - name: jellystat
      port: 3000
